Fix overflow of long url in mmber detail page

--- a/templates/styles/components/_card-person.css
+++ b/templates/styles/components/_card-person.css
@@ -27,5 +27,9 @@
     .position {
       @apply block mb-8 md:mb-14 text-hl-h3;
     }
+
+    .link {
+      @apply break-all;
+    }
   }
 }
